# fdmtools

./: LICENSE  README.md  README.rst  setup.cfg
fdmtools/: __init__.py  fdmtools.py  test.ipynb
fdmtools/construct/: __init__.py  construct.py
fdmtools/decompose/: __init__.py
fdmtools/halo/: __init__.py  halo.py
fdmtools/potential/: __init__.py  potential.py  test.ipynb
