[metadata]
name = fdmtools
description = Python package for constructing, evolving, and analyzing galactic dark matter halos comprised of wave dark matter.
long_description = file: README.rst
author = Tomer D. Yavetz
author_email = tyavetz@ias.edu
url = https://github.com/tyavetz/fdmtools
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scipy
